[package]
name = "everlong"
version = "0.1.0"
authors = ["Papillon6814 <41826375+Papillon6814@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.2"
bytes = "0.5.4"
rml_rtmp = "0.3.2"
trackable = "1.0.0"
mpeg2ts = "0.1.1"