[package]
name = "my_hero"
version = "0.1.0"
authors = ["Papillon6814 <41826375+Papillon6814@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hls_m3u8 = "0.3.0"

[[bin]]
name = "my_hero"
path = "src/main.rs"

[lib]
name = "my_hero"
path = "src/lib.rs"