[package]
name = "playground"
version = "0.1.0"
authors = ["Papillon6814 <41826375+Papillon6814@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
bytes = "0.5.4"
trackable = "0.2"
mpeg2ts = "0.1.1"